<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <string name="yes">确定</string>
    <string name="name">名称</string>
    <string name="app_name">流量观测</string>
    <string name="show_textview_rx">下载流量（KB）</string>
    <string name="show_textview_tx">上传流量（KB）</string>
    <string name="show_textview_total">流量总计（KB）</string>
    <string name="liuliangdanwei">M</string>
    <string name="morenliuliang">0.0</string>
    <string name="now_liuliang_total">流量统计</string>
    <string name="g_down_total">3G下载流量：</string>
    <string name="g_up_total">3G上传流量：</string>
    <string name="g_total">3G总计流量：</string>
    <string name="down_total">下载总流量：</string>
    <string name="up_total">上传总流量：</string>
    <string name="total_liuliang">         总流量：</string>
    <string name="date_chose_start">开始时间</string>
    <string name="date_chose_over">结束时间</string>
    <string name="search_now"> 查询  </string>
    <string name="every_apps_data">流量使用详情</string>
    <string name="show_now"> 当前流量 </string>

</resources>