<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fate_test_bg"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <TextView
        android:id="@+id/liuliang_biaoti"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/liuliang_total_height"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/now_liuliang_total"
        android:textSize="@dimen/total_text_size" />

    <TextView
        android:id="@+id/all_line"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/line_height"
        android:layout_below="@+id/liuliang_biaoti"
        android:paddingTop="10dp"
        android:background="#EEE9E9" />

    <TextView
        android:id="@+id/g_down"
        android:layout_width="@dimen/liuliang_mintotal_width"
        android:layout_height="@dimen/liuliang_mintotal_height"
        android:layout_below="@+id/all_line"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top_juli"
        android:text="@string/g_down_total"
        android:textSize="@dimen/mid_text_size" />

    <TextView
        android:id="@+id/g_down_edit"
        android:layout_width="@dimen/liuliang_mintotal_width"
        android:layout_height="@dimen/liuliang_mintotal_height"
        android:layout_below="@+id/liuliang_biaoti"
        android:layout_marginTop="@dimen/margin_top_juli"
        android:layout_toRightOf="@+id/g_down"
        android:textSize="@dimen/mid_text_size" />

    <TextView
        android:id="@+id/g_up"
        android:layout_width="@dimen/liuliang_mintotal_width"
        android:layout_height="@dimen/liuliang_mintotal_height"
        android:layout_below="@+id/g_down"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top_juli"
        android:text="@string/g_up_total"
        android:textSize="@dimen/mid_text_size" />

    <TextView
        android:id="@+id/g_up_edit"
        android:layout_width="@dimen/liuliang_mintotal_width"
        android:layout_height="@dimen/liuliang_mintotal_height"
        android:layout_below="@+id/g_down_edit"
        android:layout_marginTop="@dimen/margin_top_juli"
        android:layout_toRightOf="@+id/g_up"
        android:textSize="@dimen/mid_text_size" />

    <TextView
        android:id="@+id/g_total"
        android:layout_width="@dimen/liuliang_mintotal_width"
        android:layout_height="@dimen/liuliang_mintotal_height"
        android:layout_below="@+id/g_up"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top_juli"
        android:text="@string/g_total"
        android:textSize="@dimen/mid_text_size" />

    <TextView
        android:id="@+id/g_total_edit"
        android:layout_width="@dimen/liuliang_mintotal_width"
        android:layout_height="@dimen/liuliang_mintotal_height"
        android:layout_below="@+id/g_up_edit"
        android:layout_marginTop="@dimen/margin_top_juli"
        android:layout_toRightOf="@+id/g_total"
        android:textSize="@dimen/mid_text_size" />

    <TextView
        android:id="@+id/total_down"
        android:layout_width="@dimen/liuliang_mintotal_width"
        android:layout_height="@dimen/liuliang_mintotal_height"
        android:layout_below="@+id/g_total"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top_juli"
        android:text="@string/down_total"
        android:textSize="@dimen/mid_text_size" />

    <TextView
        android:id="@+id/total_down_edit"
        android:layout_width="@dimen/liuliang_mintotal_width"
        android:layout_height="@dimen/liuliang_mintotal_height"
        android:layout_below="@+id/g_total_edit"
        android:layout_marginTop="@dimen/margin_top_juli"
        android:layout_toRightOf="@+id/total_down"
        android:textSize="@dimen/mid_text_size" />

    <TextView
        android:id="@+id/total_up"
        android:layout_width="@dimen/liuliang_mintotal_width"
        android:layout_height="@dimen/liuliang_mintotal_height"
        android:layout_below="@+id/total_down"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top_juli"
        android:text="@string/up_total"
        android:textSize="@dimen/mid_text_size" />

    <TextView
        android:id="@+id/total_up_edit"
        android:layout_width="@dimen/liuliang_mintotal_width"
        android:layout_height="@dimen/liuliang_mintotal_height"
        android:layout_below="@+id/total_down_edit"
        android:layout_marginTop="@dimen/margin_top_juli"
        android:layout_toRightOf="@+id/total_up"
        android:textSize="@dimen/mid_text_size" />

    <TextView
        android:id="@+id/liuliang_total"
        android:layout_width="@dimen/liuliang_mintotal_width"
        android:layout_height="@dimen/liuliang_mintotal_height"
        android:layout_below="@+id/total_up"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top_juli"
        android:text="@string/total_liuliang"
        android:textSize="@dimen/mid_text_size" />

    <TextView
        android:id="@+id/liuliang_total_edit"
        android:layout_width="@dimen/liuliang_mintotal_width"
        android:layout_height="@dimen/liuliang_mintotal_height"
        android:layout_below="@+id/total_up_edit"
        android:layout_marginTop="@dimen/margin_top_juli"
        android:layout_toRightOf="@+id/liuliang_total"
        android:textSize="@dimen/mid_text_size" />

    <TextView
        android:id="@+id/all_line_mid"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/line_height"
        android:layout_below="@+id/liuliang_total"
        android:background="#EEE9E9" />

    <TextView
        android:id="@+id/date_start"
        android:layout_width="@dimen/date_textview_width"
        android:layout_height="@dimen/date_kongjian_height"
        android:layout_below="@+id/all_line_mid"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top_juli"
        android:gravity="center"
        android:textSize="@dimen/mid_text_size" />

    <Button
        android:id="@+id/date_start_btn"
        android:layout_width="@dimen/date_button_width"
        android:layout_height="@dimen/date_kongjian_height"
        android:layout_alignTop="@+id/date_start"
        android:layout_toRightOf="@+id/date_start"
        android:background="@drawable/btn_1"
        android:text="@string/date_chose_start"
        android:textSize="@dimen/mid_text_size" >
    </Button>

    <TextView
        android:id="@+id/date_over"
        android:layout_width="@dimen/date_textview_width"
        android:layout_height="@dimen/date_kongjian_height"
        android:layout_below="@+id/date_start"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top_juli"
        android:gravity="center"
        android:textSize="@dimen/mid_text_size" />

    <Button
        android:id="@+id/date_over_btn"
        android:layout_width="@dimen/date_button_width"
        android:layout_height="@dimen/date_kongjian_height"
        android:layout_alignTop="@+id/date_over"
        android:layout_toRightOf="@+id/date_start"
        android:background="@drawable/btn_2"
        android:text="@string/date_chose_over"
        android:textSize="@dimen/mid_text_size" >
    </Button>

    <LinearLayout
        android:id="@+id/search_button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_over"
        android:paddingTop="5dp" >

        <Button
            android:id="@+id/shownow_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/date_kongjian_height"
            android:layout_weight="1"
            android:background="@drawable/btn_3"
            android:text="@string/show_now"
            android:textSize="@dimen/mid_text_size" 
            android:paddingRight="5dp">
        </Button>

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/date_kongjian_height"
            android:layout_weight="1"
            android:background="@drawable/btn_3"
            android:text="@string/search_now"
            android:textSize="@dimen/mid_text_size" >
        </Button>
    </LinearLayout>

    <TextView
        android:id="@+id/all_line_bottom"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/line_height"
        android:layout_below="@+id/search_button1"
        android:layout_marginTop="@dimen/margin_top_juli"
        android:background="#EEE9E9" />

    <Button
        android:id="@+id/chakan_apps_data"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/date_kongjian_height"
        android:layout_below="@+id/all_line_bottom"
        android:layout_marginTop="@dimen/margin_top_juli"
        android:background="@drawable/btn_4"
        android:text="@string/every_apps_data"
        android:textSize="@dimen/mid_text_size" >
    </Button>

</RelativeLayout>